Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-888

C++ Memory leak in RowGroupSerializer

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      The class `::parquet::RowGroupSerializer` (writer-internal.h) inherits from `::parquet::RowGroupWriter::Content` however, the `Content` class does not have a virtual dtor leading to a leak when the `::parquet::RowGroupWriter` is closed.

      Attachments

        Activity

          People

            daedric Thomas Sanchez
            daedric Thomas Sanchez
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: