PARQUET-888: Add missing virtual dtor.

Author: Thomas Sanchez <thomas.sanchz@gmail.com>

Closes #256 from daedric/PARQUET-888 and squashes the following commits:

481dd6b [Thomas Sanchez] PARQUET-888: Add missing virtual dtor.

Change-Id: I950d51ebe27fd175b13898a94a9b7c1ef16c4383